--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 14 21:07:46 CEST 2020
-sdk.dir=C\:\\Users\\sverr\\AppData\\Local\\Android\\Sdk
+#Thu Oct 15 09:19:00 CEST 2020
+sdk.dir=/Users/sverrelofthus/Library/Android/sdk
